--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,18 @@
 ---
 title: "About"
-image: profile.jpg
+image: profile.png
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
       href: https://linkedin.com
     - icon: github
       text: Github
       href: https://github.com
+    - icon: blog
+      text: blog
+      href: https://velog.io/@stts1373/posts
 
 ---
 
